--- a/rabbitApp/templates/comments.html
+++ b/rabbitApp/templates/comments.html
@@ -1,18 +1,27 @@
 <li class="list-group-item">
-    <div class="card mb-2">
-    <div class="card-body">
-    <p class="card-text text-muted h6"><a class="card-text text-muted h6" href="{{node.value.user}}">
-        <b>{{node.value.user}}</b></a> at {{node.value.creation_date}}</p><p>{{ node.value.text| safe}}</p>
-        {{ node.value.get_score }}
-        <form method="post" action="{% url 'vote' post.id node.value.id %}">
-            {% csrf_token %}
-            <input type="radio" id="{{ node.value.id }}rTrue" name="score" value="True">
-            <label for="{{ node.value.id }}rTrue">Suki</label>
-            <input type="radio" id="{{ node.value.id }}rFalse" name="score" value="False">
-            <label for="{{ node.value.id }}rFalse">Kirai</label>
-            <button type="submit" class="btn btn-sm">Vote</button>
-        </form>
-    </div>
+    <div class="card mb-4">
+        <div class="row">
+            <div class="col-1" style="margin-left: 0">
+                <div class="card-body">
+                    <form id="{{ post.id }}{{ node.value.id }}form">
+                        {% csrf_token %}
+                        <a class="card-text"  id = "buttonup" onclick="enviarVotacioComment('{{ post.id }}','{{node.value.id }}','True')"><i class="fas fa-arrow-up small grey-text" id="arrowup"></i></a>
+                        <p class="card-text" id="p1{{ post.id }}{{ node.value.id }}" style="margin-bottom: 0">{{  node.value.get_score }}</p>
+                        <a class="card-text" onclick="enviarVotacioComment('{{ post.id }}','{{node.value.id }}','False')" ><i class="fas fa-arrow-down small grey-text"></i></a>
+                    </form>
+                </div>
+
+            </div>
+            <div class="col"  style="padding-right: 0">
+                <div class="card-body" style="padding-left: 0">
+                    <p class="card-text text-muted h6"><a class="card-text text-muted h6" href="{{node.value.user}}">
+                        <b>{{node.value.user}}</b></a> at {{node.value.creation_date}}</p><p>{{ node.value.text| safe}}</p>
+
+                 </div>
+            </div>
+
+        </div>
+
     </div>
 
     {% if request.user.is_authenticated %}
@@ -47,14 +56,23 @@
     </ul>
 </li>
 
-<script type="text/javascript">
-    function showReply(nodeId) {
-      var x = document.getElementById(nodeId);
-      if (x.style.display === "none") {
-        x.style.display = "block";
-      } else {
-        x.style.display = "none";
-      }
-    }
+<script>
+   var  enviarVotacioComment = (id,id_com,votacio) =>{
+            let data = $('#' + id + id_com+ 'form').serialize() +  "&score=" + votacio;
+            var uri = location.protocol + '//' + location.host + "/vote/" + id + '/' + id_com ;
+
+            $.ajax({
+                method: 'POST',
+                url: uri,
+                data: data,
+                success: (data) => {
+                    if (data.status == 'ok'){
+                        document.getElementById("p1"+id+id_com).innerHTML =  data.score;
+                    } else{
+                        alert(data.message)
+                    }
+                }
+            })
+        }
 </script>
 
