Corregido la copia de enlace para que sea en funcion del domino de la pagina (no hardcoded XDD) Se ha eliminado tambien la opcion de embed (que le den mierda)

--- a/rabbitApp/templates/deleteModal.html
+++ b/rabbitApp/templates/deleteModal.html
@@ -31,7 +31,8 @@
               var aux = document.createElement("input");
 
               // Asigna el contenido del elemento especificado al valor del campo
-              aux.setAttribute("value", link);
+              let ref = window.location.host;
+              aux.setAttribute("value", ref + link);
 
               // Añade el campo a la página
               document.body.appendChild(aux);
