--- a/rabbitApp/templates/warren_view.html
+++ b/rabbitApp/templates/warren_view.html
@@ -2,34 +2,7 @@
 
 {% block content-body %}
     {% for post in posts %}
-        <div class="card mb-4">
-            <div class="card-body">
-            <p class="card-text text-muted h6">
-                <a  class="card-text text-muted h6" href="{% url 'warren' post.warren.name %}">
-                    {% if post.warren.profile_img %}
-                    <img class="img-fluid" src="{{ post.warren.profile_img.url }}" style="width: 25px;height: 25px;border-radius: 50%">
-                    {% endif %}
-                    <b>w/{{ post.warren.name }}</b></a>
-                    • Posted by <a class="card-text text-muted h6" href="{% url 'profile' post.user %}"><b>r/{{ post.user }}</b></a>
-                    at {{ post.creation_date }}
-            </p>
-                <a href="{% url 'post' post.id %}"><h2 class="card-title text-muted">{{ post.title | safe }}</h2></a>
-                {% if post.description %}
-                    <p class="card-text">{{ post.description | safe }}</p>
-                {% elif post.img %}
-                    <img src= "{{ post.img.url }}" class="img-fluid" alt="img" />
-                {% elif post.link %}
-                    <a href={{ post.link }}>{{ post.link }}</a>
-                {% endif %}
-                {% if post.user == request.user %}
-
-                    <div class="float-right">
-                        <a href="#" class="my-1" onclick="deletePost('{{ post.id }}')"><i class="fas fa-trash small cyan-text"></i></a>
-                    </div>
-
-                {% endif %}
-            </div>
-        </div>
+        {% include "cardpost.html" %}
     {% endfor %}
 {% endblock %}
 
