--- a/rabbitApp/templates/warren_view.html
+++ b/rabbitApp/templates/warren_view.html
@@ -1,9 +1,11 @@
-{% extends 'subsfollow.html' %}
+{% extends 'deleteModal.html' %}
 
 {% block content-body %}
     {% for post in posts %}
         {% include "cardpost.html" %}
     {% endfor %}
+    {% include 'confirm_delete.html' %}
+    {% include 'select_report.html' %}
 {% endblock %}
 
 {% block sidebar %}
