--- a/rabbitApp/templates/deleteModal.html
+++ b/rabbitApp/templates/deleteModal.html
@@ -32,7 +32,7 @@
 
               // Asigna el contenido del elemento especificado al valor del campo
               let ref = window.location.host;
-              aux.setAttribute("value", ref + link);
+              aux.setAttribute("value", link);
 
               // Añade el campo a la página
               document.body.appendChild(aux);
