--- a/rabbitApp/templates/cardpost.html
+++ b/rabbitApp/templates/cardpost.html
@@ -6,17 +6,17 @@
                         <form id="{{ post.id }}form">
                             {% csrf_token %}
                             {% if post in scores_true %}
-                                <a class="card-text" id = "buttonup" onclick="enviarVotacio('{{ post.id }}','True')" style="margin-left: -2px"><i class="fas fa-arrow-up fa-1x orange-text" id="arrowup"></i></a>
+                                <a class="card-text" id = "buttonup" onclick="enviarVotacio('{{ post.id }}','True')" style="margin-left: -2px"><i class="fas fa-arrow-up fa-1x orange-text" id="arrowup{{ post.id }}"></i></a>
                                 <p class="card-text" id="p1{{ post.id }}" style="margin-bottom: 0">{{ post.get_score}}</p>
-                                <a class="card-text" onclick="enviarVotacio('{{ post.id }}','False')" style="margin-left: -2px"><i class="fas fa-arrow-down fa-1x grey-text" id="arrowdown"></i></a>
+                                <a class="card-text" onclick="enviarVotacio('{{ post.id }}','False')" style="margin-left: -2px"><i class="fas fa-arrow-down fa-1x grey-text" id="arrowdown{{ post.id }}"></i></a>
                             {% elif post in scores_false %}
-                                <a class="card-text" id = "buttonup" onclick="enviarVotacio('{{ post.id }}','True')" style="margin-left: -2px"><i class="fas fa-arrow-up fa-1x grey-text" id="arrowup"></i></a>
+                                <a class="card-text" id = "buttonup" onclick="enviarVotacio('{{ post.id }}','True')" style="margin-left: -2px"><i class="fas fa-arrow-up fa-1x grey-text" id="arrowup{{ post.id }}"></i></a>
                                 <p class="card-text" id="p1{{ post.id }}" style="margin-bottom: 0">{{ post.get_score}}</p>
-                                <a class="card-text" onclick="enviarVotacio('{{ post.id }}','False')" style="margin-left: -2px"><i class="fas fa-arrow-down fa-1x orange-text" id="arrowdown"></i></a>
+                                <a class="card-text" onclick="enviarVotacio('{{ post.id }}','False')" style="margin-left: -2px"><i class="fas fa-arrow-down fa-1x orange-text" id="arrowup{{ post.id }}"></i></a>
                             {% else %}
-                                <a class="card-text" id = "buttonup" onclick="enviarVotacio('{{ post.id }}','True')" style="margin-left: -2px"><i class="fas fa-arrow-up fa-1x grey-text" id="arrowup"></i></a>
+                                <a class="card-text" id = "buttonup" onclick="enviarVotacio('{{ post.id }}','True')" style="margin-left: -2px"><i class="fas fa-arrow-up fa-1x grey-text" id="arrowup{{ post.id }}"></i></a>
                                 <p class="card-text" id="p1{{ post.id }}" style="margin-bottom: 0">{{ post.get_score}}</p>
-                                <a class="card-text" onclick="enviarVotacio('{{ post.id }}','False')" style="margin-left: -2px"><i class="fas fa-arrow-down fa-1x grey-text" id="arrowdown"></i></a>
+                                <a class="card-text" onclick="enviarVotacio('{{ post.id }}','False')" style="margin-left: -2px"><i class="fas fa-arrow-down fa-1x grey-text" id="arrowdown{{ post.id }}"></i></a>
                             {% endif %}
                         </form>
                     </div>
