--- a/rabbitApp/templates/cardpost.html
+++ b/rabbitApp/templates/cardpost.html
@@ -3,6 +3,7 @@
             <div class="row">
                 <div class="col-1" style="margin-left: 0">
                     <div class="card-body">
+                    {% if request.user.is_authenticated %}
                         <form id="{{ post.id }}form">
                             {% csrf_token %}
                             {% if post in scores_true %}
@@ -19,6 +20,7 @@
                                 <a class="card-text" onclick="enviarVotacio('{{ post.id }}','False')" style="margin-left: -2px"><i class="fas fa-arrow-down fa-1x grey-text" id="arrowdown{{ post.id }}"></i></a>
                             {% endif %}
                         </form>
+                    {% endif %}
                     </div>
 
                 </div>
@@ -55,13 +57,15 @@
                                     <i class="fas fa-share small grey-text"> Share </i>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-center" style="margin-left: -5%;min-width: 30%">
-                                    <a class="dropdown-item text-left"  onclick="copyP('http://127.0.0.1:8000{% url 'post' post.id %}')"><i class="fas fa-link small grey-text"> Copy link</i> </a>
+                                    <a class="dropdown-item text-left"  onclick="copyP('{% url 'post' post.id %}')"><i class="fas fa-link small grey-text"> Copy link</i> </a>
 
                                 </div>
                             </div>
+                        {% if request.user.is_authenticated %}
                             <div class="button" style="margin-left: 10px" >
-                                <a href="#" data-toggle="modal" data-target="#modalselectreport" class="my-1" ><i class="fas fa-flag small grey-text"> Report </i></a>
+                                <a href="#" data-toggle="modal" data-target="#modalselectreport" onclick="report_id = {{ post.id }};" class="my-1" ><i class="fas fa-flag small grey-text"> Report </i></a>
                             </div>
+                        {% endif %}
                             {% if post.user == request.user %}
                                 <div class="button" style="margin-left: 10px">
                                     <a href="#" class="my-1" onclick="deletePost('{{ post.id }}')"><i class="fas fa-trash small grey-text"> Delete</i></a>
